fixed navbar & added full bleed

--- a/sass/site/header/_navbar.scss
+++ b/sass/site/header/_navbar.scss
@@ -1,56 +1,60 @@
-
 /** front Page **/
 // Styling for the navbar
 
 #mainNav {
   background-color: $gray-900;
-  .navbar-toggler {
-    font-size: 12px;
-    right: 0;
-    padding: 13px;
-    text-transform: uppercase;
-    color: white;
-    border: 0;
-    background-color: $primary;
-    font-family: $font__header-font;
-  }
-  div.divlogo {
-    // display: flex;
-    .navbar-brand {
-      color: $primary;
-      font-family: $font__script;
-      &.active,
-      &:active,
-      &:focus,
-      &:hover {
-        color: darken($primary, 10%);
-      }
+
+  div.row.btnrow {
+    width:  100%;
+    .navbar-toggler {
+      font-size: 12px;
+      right: 0;
+      padding: 13px;
+      text-transform: uppercase;
+      color: white;
+      border: 0;
+      background-color: $primary;
+      font-family: $font__header-font;
     }
-    .site-description {
-    }
-  }
-  .navbar-nav {
-    .nav-item {
-      .nav-link {
-        // font-size: 90%;
-        font-weight: 400;
-        padding: 0.75em 0;
-        letter-spacing: 1px;
-        color: white;
-        font-family: $font__header-font;
+
+    div.divlogo {
+      .navbar-brand {
+        width: 100%;
+
+        color: $primary;
+        font-family: $font__script;
+
         &.active,
+        &:active,
+        &:focus,
         &:hover {
-          color: $primary;
+          color: darken($primary, 10%);
         }
       }
     }
-  }
-  i.site-description {
-       font-size: 14px;
+
+    .navbar-nav {
+      .nav-item {
+        .nav-link {
+          font-weight: 400;
+          padding: 0.75em 0;
+          letter-spacing: 1px;
+          color: white;
+          font-family: $font__header-font;
+
+          &.active,
+          &:hover {
+            color: $primary;
+          }
+        }
+      }
+    }
+
+    i.site-description {
+      font-size: 14px;
+    }
   }
 }
-
-
 @media(min-width:$query_b4_lg) {
   #mainNav {
     padding-top: 25px;
@@ -60,69 +64,70 @@
     transition: padding-top 0.3s, padding-bottom 0.3s;
     border: none;
     background-color: transparent;
-      .navbar-brand {
-        font-size: 1.2em;
-        -webkit-transition: all 0.3s;
-        -moz-transition: all 0.3s;
-        transition: all 0.3s;
+
+    .navbar-brand {
+      font-size: 1.2em;
+      -webkit-transition: all 0.3s;
+      -moz-transition: all 0.3s;
+      transition: all 0.3s;
+    }
+
+    i.site-description {
+      font-size: 92%;
+
+      small {
+        font-size: 70%;
       }
-      i.site-description {
-          font-size: 80%;
-          small {
-            font-size: 70%;
-          }
-      }
-   .navbar-nav {
+    }
+
+    .navbar-nav {
       margin-left: 0;
+
       .nav-item {
         .nav-link {
           padding: 1.1em 0.75em !important;
         }
       }
     }
+
     .divbtn {
       display: none;
     }
+
     .collapse.navbar-collapse {
       flex: 0 1 auto;
       font-size: 90%;
     }
+
     &.navbar-shrink {
       padding-top: 0;
       padding-bottom: 0;
       background-color: $gray-900;
+
       .navbar-brand {
         font-size: 1.25em;
         padding: 12px 0;
       }
+
       i.site-description {
-          display: none;
+        display: none;
       }
     }
   }
 }
 @media(max-width:545px) {
   i.site-description {
-      display: none;
+    display: none;
   }
 }
-
-// rbtm
-@media screen and (min-width: $query_b4_md) {
-  #mainNav button.navbtn {
-     margin-left: 120px;
-  }
-}
-
-@media screen and (min-width: $query_b4_sm) {
-  #mainNav a.navbar-brand {
-    margin-right: 270px;
-  }
-}
-
 
 @media screen and (max-width: $query_b4_xs_mx) {
-  #mainNav i.site-description {
-      display:none;
+  #mainNav {
+    div.row.btnrow {
+      // width: 100%;
+      i.site-description {
+        display: none;
+      }
+    }
   }
 }
